Archive2/46/58c249feb00f3b/output
main.cpp: In member function 'bool N::D::operator==(const N::D&)':
main.cpp:16:41: error: no matching function for call to 'N::D::operator==(N::C, N::C)'
             bool a = operator==(C{}, C{});
                                         ^
main.cpp:16:41: note: candidate is:
main.cpp:15:14: note: bool N::D::operator==(const N::D&)
         bool operator==(const D& x) {
              ^
main.cpp:15:14: note:   candidate expects 1 argument, 2 provided
main.cpp:16:18: warning: unused variable 'a' [-Wunused-variable]
             bool a = operator==(C{}, C{});
                  ^
main.cpp: In member function 'bool N::D::f(const N::D&)':
main.cpp:20:32: error: no matching function for call to 'N::D::f(N::C, N::C)'
             bool a = f(C{}, C{});
                                ^
main.cpp:20:32: note: candidate is:
main.cpp:19:14: note: bool N::D::f(const N::D&)
         bool f(const D& x) {
              ^
main.cpp:19:14: note:   candidate expects 1 argument, 2 provided
main.cpp:20:18: warning: unused variable 'a' [-Wunused-variable]
             bool a = f(C{}, C{});
                  ^
